--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    
     <title>Nuestras montañas</title>
   </head>
   <body>
@@ -9,6 +10,6 @@
       <a href="ejerciciosTema2/nosotros.html">Nosotros</a><br>
       <a href="ejerciciosTema2/nuestrosServicios.html">Nuestros servicios</a><br>
       <a href="https://es.wikipedia.org/wiki/Senderismo">wikipedia</a><br>
+      <a href="ejerciciosTema3/opinion1.html">Tu opinión cuenta</a>
     </nav>
-  </body>
-</html>
+</body></html>
