--- a/index.html
+++ b/index.html
@@ -2,14 +2,133 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+
     
     <title>Nuestras montañas</title>
+    <style>
+		html,body {
+    	height:100%;
+		}
+		nav { 
+			text-align: center;
+		}
+		nav a{ 
+			padding: 30px;
+		}
+
+		header {
+	    display:block;
+  	  background:#AAA;
+    	padding:10px 0px;
+		}
+		section {
+    	width: 79%;
+    	background: #DDD;
+    	float: left;
+    	overflow: auto;	
+	    padding-bottom: 60px;
+  	  padding-top:30px;
+		}
+
+	aside {
+    float: right;
+    border: 1px dotted red;
+    width: 19%;
+		text-align: center;
+	}
+	footer {
+    position: relative;
+    padding:5px 0px;
+    clear: both;
+    background: #000;
+    text-align: center;
+    color: #fff;
+		margin: auto;
+	}
+         form div 
+      {
+        padding:10px;
+      }
+      form div > label
+      {
+        display: block;
+        width: 100%;
+      }
+  </style>
   </head>
   <body>
+    <header>
+      <h1>
+        BIENVENIDO A LA WEB DE MONTAÑA</h1>
+      <picture><img src="ejerciciosTema2/imagenes/logo_empresa.jpg" height="250"></picture>
+      </header>
     <nav>
       <a href="ejerciciosTema2/nosotros.html">Nosotros</a><br>
       <a href="ejerciciosTema2/nuestrosServicios.html">Nuestros servicios</a><br>
       <a href="https://es.wikipedia.org/wiki/Senderismo">wikipedia</a><br>
       <a href="ejerciciosTema3/opinion1.html">Tu opinión cuenta</a>
     </nav>
+      <aside> 
+      <h2>
+        Conócenos mejor
+        </h2>
+      <section>
+        <h3>Noticias destacadas</h3>
+        <p>
+          ................
+        </p>
+        </section>
+      <section>
+        <h3>Colaboradores</h3>
+        <p>
+          ................
+        </p></section></aside>
+      
+      <section>
+      <header>
+        <h1>Titulo del artículo</h1>
+        <h2>Subtitulo</h2></header>
+      <article>
+        <h3>
+          Titulo</h3>
+        <p>
+          .................
+        </p></article>
+<article>
+        <h3>
+          Titulo</h3>
+        <p>
+          .................
+        </p></article>
+      <footer>
+        <h4>
+          Autor
+        </h4>
+        <p>
+          .................
+        </p></footer></section>
+      <section>
+      <header>
+        <h1>Titulo del artículo</h1>
+        <h2>Subtitulo</h2></header>
+      <article>
+        <h3>
+          Titulo</h3>
+        <p>
+          .................
+        </p></article>
+<article>
+        <h3>
+          Titulo</h3>
+        <p>
+          .................
+        </p></article>
+      <footer>
+        <h4>
+          Autor
+        </h4>
+        <p>
+          .................
+        </p></footer></section>
+    <footer>CopyRight Pilar</footer>
 </body></html>
